--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
-.App {
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
+div {
+  float: left;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App {
+  height: 100%;
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.input {
+  background-color: #f6f5f5;
+  width: 100%;
+  height: 100%;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.keywords_input {
+  width: 100%;
+  height: 5%;
+  background-color: #22497e;
+  position: absolute;
+  display: inline-block;
+  right: 0;
 }
-
-.App-link {
-  color: #61dafb;
+.keywords {
+  margin: 6px;
+  width: 30em;
+  height: 2em;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.keywords_input button {
+  height: 2.4em;
+  margin-top: 6px;
+}
+.search {
+  width: 30%;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.list {
+  background-color: #f6f5f5;
+  width: 100%;
+  height: 95%;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+.list span {
+  width: 98%;
+  height: 7%;
+  display: inline-block;
+  padding-bottom: 10px;
+  text-align: left;
+  margin-left: 0px;
+}
+#map {
+  width: 70%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.list_content {
+  padding-bottom: 13px;
+  padding-top: 13px;
+  width: 100%;
+  border-bottom: #d5dddd solid 1px;
 }
