--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,45 @@
-body,
-#root {
-  height: 100%;
-  width: 100%;
-}
-div {
-  float: left;
-  text-align: center;
-}
-.App {
-  height: 100%;
-  width: 100%;
-}
-.input {
+.container {
   background-color: #f6f5f5;
-  width: 100%;
+}
+.search {
+  width: 29.6%;
   height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.map {
+  width: 70%;
+  height: 100%;
+  position: absolute;
+  top: 0;
 }
 .keywords_input {
-  width: 100%;
-  height: 5%;
   background-color: #22497e;
-  position: absolute;
-  display: inline-block;
-  right: 0;
 }
 .keywords {
   margin: 6px;
-  width: 30em;
+  width: 37em;
   height: 2em;
 }
 .keywords_input button {
   height: 2.4em;
-  margin-top: 6px;
+  margin-right: 6px;
 }
-.search {
-  width: 30%;
-  height: 100%;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
+
 .list {
   background-color: #f6f5f5;
-  width: 100%;
   height: 95%;
-  position: absolute;
   right: 0;
   bottom: 0;
 }
 .list span {
-  width: 98%;
-  height: 7%;
   display: inline-block;
   padding-bottom: 10px;
   text-align: left;
   margin-left: 0px;
 }
-#map {
-  width: 70%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-}
+
 .list_content {
   padding-bottom: 13px;
   padding-top: 13px;
